--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "license": "AGPL-3.0",
   "dependencies": {
     "delay": "^4.3.0",
+    "fast-glob": "^3.0.4",
     "got": "^9.6.0",
+    "js-yaml": "^3.13.1",
     "level": "^5.0.1",
+    "stdout": "0.0.3",
     "through2": "^3.0.1"
   }
 }
