--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "qcfd",
   "version": "0.0.0",
   "license": "AGPL-3.0",
+  "scripts": {
+    "build": "parcel build index.html --no-source-maps",
+    "dev": "parcel index.html"
+  },
   "dependencies": {
     "delay": "^4.3.0",
     "fast-glob": "^3.0.4",
@@ -14,6 +18,7 @@
   "devDependencies": {
     "parcel-bundler": "^1.12.3",
     "vega-embed": "^4.2.1",
-    "vega-lite": "^2.7.0"
+    "vega-lite": "^2.7.0",
+    "water.css": "kognise/water.css#28a84ab3f683c517529ac45dfbfad5df221d6cf4"
   }
 }
