--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "license": "AGPL-3.0",
   "scripts": {
     "build": "parcel build index.html --no-source-maps",
+    "clean": "rm -fr .cache/ dist/",
     "dev": "parcel index.html"
   },
   "dependencies": {
@@ -19,7 +20,7 @@
     "parcel-bundler": "^1.12.3",
     "vega": "^5.4.0",
     "vega-embed": "^4.2.1",
-    "vega-lite": "^3.0.0",
+    "vega-lite": "^3.3.0",
     "water.css": "kognise/water.css#28a84ab3f683c517529ac45dfbfad5df221d6cf4"
   }
 }
