--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "build": "parcel build index.html --no-source-maps",
     "clean": "rm -fr .cache/ dist/",
     "deploy": "parcel build index.html --no-source-maps --public-url /qcfd && gh-pages -d dist",
-    "dev": "parcel index.html"
+    "dev": "parcel index.html",
+    "vl2vg": "vl2vg js/spec.json > js/s2.json"
   },
   "dependencies": {
     "delay": "^4.3.0",
@@ -21,7 +22,6 @@
     "gh-pages": "^2.0.1",
     "parcel-bundler": "^1.12.3",
     "vega": "^5.4.0",
-    "vega-embed": "^4.2.1",
     "vega-lite": "^3.3.0",
     "water.css": "kognise/water.css#28a84ab3f683c517529ac45dfbfad5df221d6cf4"
   }
